# odoo-inventory

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: odoo_prod.conf
odoo_inventory/update_inventory/: update_inventory.py  update_inventory_test.py
