[tool.poetry]
name = "odoo-inventory"
version = "0.1.0"
description = "Inventory and order management with Odoo"
authors = ["jakobkolb <jakob.j.kolb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-xdist = "^2.5.0"

[tool.pytest.ini_options]
python_files = ['*_test.py']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
